# zsh-module-rs

./: Cargo.toml  README.md
example/: Cargo.toml  Makefile
example/src/: lib.rs
examples/greeter/: Cargo.toml  Makefile  empty-zsh
examples/parameters/: Cargo.toml
examples/parameters/src/: lib.rs
examples/workarounds/: Cargo.toml
examples/workarounds/src/: lib.rs
greeter/: Makefile  README.md  zshrc
greeter/src/: lib.rs
zsh-module/: Cargo.toml  ]
zsh-module/src/: export_module.rs  features.rs  files.rs  hashtable.rs  lib.rs  log.rs  options.rs  string_array.rs  terminal.rs  variable.rs  zalloc.rs  zsh.rs
zsh-module/src/types/: cstring.rs  error.rs  files.rs  mod.rs  string_array.rs
zsh-module/src/zsh/: param.rs
zsh-sys/: Cargo.toml  build.rs  config.h
zsh-sys/headers/: builtin.epro  compat.epro  cond.epro  context.epro  exec.epro  glob.epro  hashnameddir.epro  hashtable.epro  hist.epro  init.epro  input.epro  jobs.epro  lex.epro  linklist.epro  loop.epro  main.epro  math.epro  mem.epro  module.epro  openssh_bsd_setres_id.epro  options.epro  params.epro  parse.epro  patchlevel.h  pattern.epro  prompt.epro  sigcount.h  signals.epro  signames.epro  sort.epro  string.epro  subst.epro  text.epro  utils.epro  version.h  wrapper.h  zshpaths.h  zshterm.h  zshxmods.h
zsh-sys/headers/doc/: conddef.md  mathfunc.md  paramdef.md
zsh-sys/src/: lib.rs
