[package]
name = "zsh-module"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A High-level framework for creating zsh modules"
readme = "../README.md"

[features]
export_module = []
default = ["export_module"]

[dependencies]
downcast-rs = "1.2.0"
zsh-sys = {path="../zsh-sys", version = "0.1"}
