[package]
name = "zsh-module"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A High-level framework for creating zsh modules"
readme = "../README.md"

[features]
export_module = []
default = ["export_module"]

[dependencies]
bitflags = "1.3.2"
parking_lot = "0.12.1"
paste = "1.0.14"
zsh-sys = { path = "../zsh-sys", version = "0.1" }
